--- a/styleentrar.css
+++ b/styleentrar.css
@@ -36,4 +36,15 @@ button {
   text-align: center;
   font-size: 1.25rem;
   margin-top: 25px;
+  background-color: #ccc;
+  border-radius: 4px;
+  cursor: pointer; /*Coloca o formato de dedo no cursor*/
+}
+
+#botao {
+  border-color: rgb(
+    1,
+    24,
+    24
+  ); /*A borda vai assumir a cor devido a prioridade do seletor: id é 1 o primeiro da lista, classe é o segundo e a tag a terceira*/
 }
